--- a/package.json
+++ b/package.json
@@ -1,10 +1,16 @@
 {
-  "name": "js-sdk",
-  "version": "1.0.0",
+  "name": "statsnet_js_sdk",
+  "version": "1.0.9",
   "description": "JS SDK for statsnet.co",
-  "main": "index.js",
+  "main": "./dist/index.js",
+  "module": "./dist/index.mjs",
+  "types": "./dist/index.d.ts",
+  "files": [
+    "dist"
+  ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tsup"
   },
   "repository": {
     "type": "git",
@@ -17,7 +23,12 @@
   },
   "homepage": "https://github.com/statsnet/js-sdk#readme",
   "devDependencies": {
-    "@types/node": "^20.12.8"
+    "@types/node": "^20.12.8",
+    "prettier": "3.2.5",
+    "swagger-typescript-api": "^13.0.3",
+    "ts-node": "^10.9.2",
+    "tsup": "^8.0.2",
+    "typescript": "^5.4.5"
   },
   "dependencies": {
     "node-fetch": "^2.7.0"
