--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -1,6 +1,3 @@
-# This workflow will run tests using node and then publish a package to GitHub Packages when a release is created
-# For more information see: https://docs.github.com/en/actions/publishing-packages/publishing-nodejs-packages
-
 name: Node.js Package
 
 on:
@@ -19,6 +16,6 @@ jobs:
           registry-url: https://registry.npmjs.org/
       - run: npm install --only=dev
       - run: npm run build
-      - run: npm publish
+      - run: make build-with-publish
         env:
           NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
