--- a/package.json
+++ b/package.json
@@ -1,13 +1,11 @@
 {
   "name": "statsnet_js_sdk",
-  "version": "1.1.2",
+  "version": "1.1.3",
   "description": "JS SDK for statsnet.co",
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
-  "files": [
-    "dist"
-  ],
+  "files": ["dist"],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsup"
